Update markdown P4 Closes #158, Closes #159, Closes #160, Closes #161, Closes #235, Closes #236

--- a/P4.md
+++ b/P4.md
@@ -103,51 +103,125 @@ N/A
 
 ### Subgroup
 
- - Nome, istID, githubID
-   + Issues assigned: [#1](https://github.com), [#3](https://github.com)
-   + Tasks: F1:Service, F1:Spock Tests, etc
- - Nome, istID, githubID
-   + Issues assigned: [#2](https://github.com), [#4](https://github.com)
-   + Tasks: F2:Service, F2:Spock Tests, etc
- 
+ - Isabel Soares, ist189466, isabelSoares
+   + Issues assigned: [#162], [#163], [#164], [#165], [#166], [#167], [#175], [#176], [#180], [#181], [#182], [#183], [#184], [#185], [#237], [#238], [#239], [#240]
+   + Tasks:
+      - F4:Service, F4:Spock, F4:JMeter, F4:Cypress
+      - F6:Service, F6:Spock, F6:JMeter, F6:Cypress 
+      - F7:Service, F7:Spock, F7:JMeter, F7:Cypress
+ - Rodrigo Sousa, ist189535, Sousa99
+   + Issues assigned: [#168], [#169], [#170], [#171], [#172], [#173], [#174], [#175], [#176], [#177], [#178], [#179], [#181], [#182], [#241], [#242], [#243], [#244]
+   + Tasks:
+      - F5:Service, F5:Spock, F5:JMeter, F5:Cypress
+      - F6:Service, F6:Spock, F6:JMeter, F6:Cypress
+      - F8:Service, F8:Spock, F8:JMeter, F8:Cypress
+       
+**Note** that feature 7 and 8 require much less work than any of the others, hence only one student doing both.
+
+[#162]: https://github.com/tecnico-softeng/es20al_09-project/issues/162
+[#163]: https://github.com/tecnico-softeng/es20al_09-project/issues/163
+[#164]: https://github.com/tecnico-softeng/es20al_09-project/issues/164
+[#165]: https://github.com/tecnico-softeng/es20al_09-project/issues/165
+[#166]: https://github.com/tecnico-softeng/es20al_09-project/issues/166
+[#167]: https://github.com/tecnico-softeng/es20al_09-project/issues/167
+[#168]: https://github.com/tecnico-softeng/es20al_09-project/issues/168
+[#169]: https://github.com/tecnico-softeng/es20al_09-project/issues/169
+[#170]: https://github.com/tecnico-softeng/es20al_09-project/issues/170
+[#171]: https://github.com/tecnico-softeng/es20al_09-project/issues/171
+[#172]: https://github.com/tecnico-softeng/es20al_09-project/issues/172
+[#173]: https://github.com/tecnico-softeng/es20al_09-project/issues/173
+[#174]: https://github.com/tecnico-softeng/es20al_09-project/issues/174
+[#175]: https://github.com/tecnico-softeng/es20al_09-project/issues/175
+[#176]: https://github.com/tecnico-softeng/es20al_09-project/issues/176
+[#177]: https://github.com/tecnico-softeng/es20al_09-project/issues/177
+[#178]: https://github.com/tecnico-softeng/es20al_09-project/issues/178
+[#179]: https://github.com/tecnico-softeng/es20al_09-project/issues/179
+[#180]: https://github.com/tecnico-softeng/es20al_09-project/issues/180
+[#181]: https://github.com/tecnico-softeng/es20al_09-project/issues/181
+[#182]: https://github.com/tecnico-softeng/es20al_09-project/issues/182
+[#183]: https://github.com/tecnico-softeng/es20al_09-project/issues/183
+[#184]: https://github.com/tecnico-softeng/es20al_09-project/issues/184
+[#185]: https://github.com/tecnico-softeng/es20al_09-project/issues/185
+[#237]: https://github.com/tecnico-softeng/es20al_09-project/issues/237
+[#238]: https://github.com/tecnico-softeng/es20al_09-project/issues/238
+[#239]: https://github.com/tecnico-softeng/es20al_09-project/issues/239
+[#240]: https://github.com/tecnico-softeng/es20al_09-project/issues/240
+[#241]: https://github.com/tecnico-softeng/es20al_09-project/issues/241
+[#242]: https://github.com/tecnico-softeng/es20al_09-project/issues/242
+[#243]: https://github.com/tecnico-softeng/es20al_09-project/issues/243
+[#244]: https://github.com/tecnico-softeng/es20al_09-project/issues/244
+
+
 ### Pull requests associated with this feature
 
 The list of pull requests associated with this feature is:
 
- - [PR #000](https://github.com)
- - [PR #001](https://github.com)
- - [PR #002](https://github.com)
+ - [PR #228](https://github.com/tecnico-softeng/es20al_09-project/pull/228)
+ - [PR #255](https://github.com/tecnico-softeng/es20al_09-project/pull/255)
+ - [PR #257](https://github.com/tecnico-softeng/es20al_09-project/pull/257)
 
 
 ### Listed features
 
 Below, we list **only** the implemented features. For each feature, we link the relevant files and we mark which are requested parts are completed.
 
-#### Feature number 1: _O aluno pode pedir esclarecimentos adicionais_
+#### Feature number 4: _O docente pode tornar a questão e o seu esclarecimento disponível_
 
- - [x] [Service](https://github.com)
- - [x] [Spock tests](https://github.com)
- - [x] [JMeter feature tests](https://github.com)
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/query/QueryService.java#L103-L111)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/query/service/UpdateQueryTest.groovy#L204-L220)
+ - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/jmeter/query/WSUpdateQueryTest.jmx)
    + Screenshots:
       
      ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
      
- - [x] [Cypress use case test](https://github.com)
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L85-L93)
+
+#### Feature number 5: _Um aluno, após responder a uma pergunta, pode consultar, se existirem, os pedidos de esclarecimento sobre essa pergunta e as respostas dadas_
+
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/query/QueryService.java#L166-L180)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/query/service/GetQueryTest.groovy#L241-L264)
+ - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/jmeter/query/WSGetQueryLoadTest.jmx)
+   + Screenshots:
+      
+     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
+     
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L95-#108)
+
+#### Feature number 6: _O aluno pode pedir esclarecimentos adicionais_
+
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/query/AnswerQueryService.java#L96-L120)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/query/service/CreateFurtherClarificationTest.groovy)
+ - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/jmeter/query/WSFurtherClarificationTest.jmx)
+   + Screenshots:
+      
+     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
+     
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L110-L167)
+
+#### Feature number 7: _Existe um dashboard do aluno onde é apresentada informação acerca de quantos pedidos de esclarecimento efetuou e quantos deles foram lhe foram creditados_
+
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/statistics/StatsService.java#L97-L101)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/statistics/service/GetQueryStatisticsTest.groovy)
+ - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/jmeter/statistics/WSGetStudentStatistics.jmx)
+   + Screenshots:
+      
+     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
+     
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/student/checkStatistics.js#L25-L37)
+
+#### Feature number 8: _O aluno decide se esta informação no seu dashboard deve ser pública ou privada_
+
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/query/QueryService.java#L182-L191)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/query/service/ToggleStatsPrivacyTest.groovy)
+ - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/jmeter/query/WSToggleStatisticsPrivacy.jmx)
+   + Screenshots:
+      
+     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
+     
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/student/checkStatistics.js#L43-L45)
    + Screenshot: 
    
      ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p3-images/cypress_results.png)
-
-#### Feature number N: **TODO**
-
- - [x] [Service](https://github.com)
- - [x] [Spock tests](https://github.com)
- - [ ] [JMeter feature test](https://github.com)
- - [ ] [Cypress use case test](https://github.com)
-
-
-### Additional features
-
-**TODO**: if you have implemented additional features, describe them here (following the same format as above).
 
 
 ---
