Final update on markdown
Small change on the name of jmeter test

--- a/P4.md
+++ b/P4.md
@@ -170,58 +170,70 @@ Below, we list **only** the implemented features. For each feature, we link the 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/query/QueryService.java#L103-L111)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/query/service/UpdateQueryTest.groovy#L204-L220)
  - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/jmeter/query/WSUpdateQueryTest.jmx)
-   + Screenshots:
+   + Screenshot:
       
-     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
+     ![Test results](https://user-images.githubusercontent.com/44942260/81299187-bcb47700-906d-11ea-859c-09f79b3ef5bf.png)
      
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L85-L93)
+   + Screenshot: 
+   
+     ![Test results](https://user-images.githubusercontent.com/33233238/81307315-7284c300-9078-11ea-8534-b1ade7e5dc55.png)
 
 #### Feature number 5: _Um aluno, após responder a uma pergunta, pode consultar, se existirem, os pedidos de esclarecimento sobre essa pergunta e as respostas dadas_
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/query/QueryService.java#L166-L180)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/query/service/GetQueryTest.groovy#L241-L264)
  - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/jmeter/query/WSGetQueryLoadTest.jmx)
-   + Screenshots:
+   + Screenshot:
       
-     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
+     ![Test results](https://user-images.githubusercontent.com/33233238/81303242-59c5de80-9073-11ea-8ec3-cb24d123143b.png)
      
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L95-#108)
+   + Screenshot: 
+   
+     ![Test results](https://user-images.githubusercontent.com/33233238/81307315-7284c300-9078-11ea-8534-b1ade7e5dc55.png)
 
 #### Feature number 6: _O aluno pode pedir esclarecimentos adicionais_
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/query/AnswerQueryService.java#L96-L120)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/query/service/CreateFurtherClarificationTest.groovy)
  - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/jmeter/query/WSFurtherClarificationTest.jmx)
-   + Screenshots:
+   + Screenshot:
       
-     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
+     ![Test results](https://user-images.githubusercontent.com/44942260/81303383-8843b980-9073-11ea-8754-b576897caba0.png)
      
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L110-L167)
+   + Screenshot: 
+   
+     ![Test results](https://user-images.githubusercontent.com/33233238/81307315-7284c300-9078-11ea-8534-b1ade7e5dc55.png)
 
 #### Feature number 7: _Existe um dashboard do aluno onde é apresentada informação acerca de quantos pedidos de esclarecimento efetuou e quantos deles foram lhe foram creditados_
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/statistics/StatsService.java#L97-L101)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/statistics/service/GetQueryStatisticsTest.groovy)
  - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/jmeter/statistics/WSGetStudentStatistics.jmx)
-   + Screenshots:
+   + Screenshot:
       
-     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
+     ![Test results](https://user-images.githubusercontent.com/44942260/81303698-f25c5e80-9073-11ea-9615-3be1d14a1b1b.png)
      
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/student/checkStatistics.js#L25-L37)
+   + Screenshot: 
+   
+     ![Test results](https://user-images.githubusercontent.com/33233238/81307496-a364f800-9078-11ea-91a7-1620b5dd0896.png)
 
 #### Feature number 8: _O aluno decide se esta informação no seu dashboard deve ser pública ou privada_
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/query/QueryService.java#L182-L191)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/query/service/ToggleStatsPrivacyTest.groovy)
  - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/backend/jmeter/query/WSToggleStatisticsPrivacy.jmx)
-   + Screenshots:
+   + Screenshot:
       
-     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
+     ![Test results](https://user-images.githubusercontent.com/44942260/81304051-7282c400-9074-11ea-84ff-98332fee1591.png)
      
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/student/checkStatistics.js#L43-L45)
    + Screenshot: 
    
-     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p3-images/cypress_results.png)
+     ![Test results](https://user-images.githubusercontent.com/33233238/81307496-a364f800-9078-11ea-91a7-1620b5dd0896.png)
 
 
 ---
