Updated P4 Markdown File

--- a/P4.md
+++ b/P4.md
@@ -250,51 +250,151 @@ Below, we list **only** the implemented features. For each feature, we link the 
 
 ### Subgroup
 
- - Nome, istID, githubID
-   + Issues assigned: [#1](https://github.com), [#3](https://github.com)
-   + Tasks: F1:Service, F1:Spock Tests, etc
- - Nome, istID, githubID
-   + Issues assigned: [#2](https://github.com), [#4](https://github.com)
-   + Tasks: F2:Service, F2:Spock Tests, etc
+ - Tiago Barroso, 89549, TiagoMAB
+   + Issues assigned: [#220], [#221], [#222],[#223],[#224],[#225],[#226],[#227],[#229],[#230],[#231],[#232],[#233],[#234],[#247],[#248],[#250],[#251],[#252],[#253],[#254],[#260],[#261],[#262],[#263]
+   + Tasks: 
+        - F4:JMeter Test, F4:Cypress Test
+        - F5:Service, F5:Spock Tests, F5:JMeter Test, F5:Cypress Test
+        - F6:Service, F6:Spock Tests, F6:JMeter Test, F6:Cypress Test
+ - Cláudia Ramires, 86286, ClaudiaRamires
+   + Issues assigned: [#220],[#221],[#222],[#223],[#224],[#225],[#226],[#227],[#229],[#230],[#231],[#232],[#233],[#234],[#247],[#248],[#250],[#251],[#252],[#253],[#254],[#260],[#261],[#262],[#263]
+   + Tasks: 
+        - F4:Service, F4:Spock Tests
+        - F7:Service, F7:Spock Tests, F7:JMeter Test, F7:Cypress Test
+        - F8:Service, F8:Spock Tests, F8:JMeter Test, F8:Cypress Test
+ 
+ 
+[#220]: https://github.com/tecnico-softeng/es20al_09-project/issues/220
+[#221]: https://github.com/tecnico-softeng/es20al_09-project/issues/221
+[#222]: https://github.com/tecnico-softeng/es20al_09-project/issues/222
+[#223]: https://github.com/tecnico-softeng/es20al_09-project/issues/223
+[#224]: https://github.com/tecnico-softeng/es20al_09-project/issues/224
+[#225]: https://github.com/tecnico-softeng/es20al_09-project/issues/225
+[#226]: https://github.com/tecnico-softeng/es20al_09-project/issues/226
+[#227]: https://github.com/tecnico-softeng/es20al_09-project/issues/227
+[#228]: https://github.com/tecnico-softeng/es20al_09-project/issues/228
+[#229]: https://github.com/tecnico-softeng/es20al_09-project/issues/229
+[#230]: https://github.com/tecnico-softeng/es20al_09-project/issues/230
+[#231]: https://github.com/tecnico-softeng/es20al_09-project/issues/231
+[#232]: https://github.com/tecnico-softeng/es20al_09-project/issues/232
+[#233]: https://github.com/tecnico-softeng/es20al_09-project/issues/233
+[#234]: https://github.com/tecnico-softeng/es20al_09-project/issues/234
+[#247]: https://github.com/tecnico-softeng/es20al_09-project/issues/247
+[#248]: https://github.com/tecnico-softeng/es20al_09-project/issues/248
+[#250]: https://github.com/tecnico-softeng/es20al_09-project/issues/250
+[#251]: https://github.com/tecnico-softeng/es20al_09-project/issues/251
+[#252]: https://github.com/tecnico-softeng/es20al_09-project/issues/252
+[#253]: https://github.com/tecnico-softeng/es20al_09-project/issues/253
+[#254]: https://github.com/tecnico-softeng/es20al_09-project/issues/254
+[#260]: https://github.com/tecnico-softeng/es20al_09-project/issues/260
+[#261]: https://github.com/tecnico-softeng/es20al_09-project/issues/261
+[#262]: https://github.com/tecnico-softeng/es20al_09-project/issues/262
+[#263]: https://github.com/tecnico-softeng/es20al_09-project/issues/263
+ 
+ 
  
 ### Pull requests associated with this feature
 
 The list of pull requests associated with this feature is:
 
- - [PR #000](https://github.com)
- - [PR #001](https://github.com)
- - [PR #002](https://github.com)
+ - [PR #245](https://github.com/tecnico-softeng/es20al_09-project/pull/245)
 
 
 ### Listed features
 
 Below, we list **only** the implemented features. For each feature, we link the relevant files and we mark which are requested parts are completed.
 
-#### Feature number 1: _Se o número de alunos inscritos, incluindo o criador do torneio, for superior a 1, o sistema gera o quiz associado ao torneio_
+#### Feature number 4: _O aluno que criou o torneio pode cancelá-lo_
 
- - [x] [Service](https://github.com)
- - [x] [Spock tests](https://github.com)
- - [x] [JMeter feature tests](https://github.com)
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/TournamentService.java#L112-L130)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/RemoveTournamentTest.groovy)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSTestCreateTournament.jmx)
+ - [x] [JMeter feature test load](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSTestCancelTournament.jmx)
    + Screenshots:
       
-     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
+     ![Load Test results](https://media.discordapp.net/attachments/539824013028098058/708269465011224625/unknown.png)
+     ![Load Test results](https://media.discordapp.net/attachments/539824013028098058/708269357645692948/unknown.png)
      
- - [x] [Cypress use case test](https://github.com)
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708269201432903690/unknown.png)
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708269115185430548/unknown.png)
+     
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/frontend/tests/e2e/specs/student/manageTournaments.js#L31-L33)
    + Screenshot: 
    
-     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p3-images/cypress_results.png)
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708263749584421004/unknown.png)
 
-#### Feature number N: **TODO**
 
- - [x] [Service](https://github.com)
- - [x] [Spock tests](https://github.com)
- - [ ] [JMeter feature test](https://github.com)
- - [ ] [Cypress use case test](https://github.com)
+
+#### Feature number 5: _Se o número de alunos inscritos, incluindo o criador do torneio, for superior a 1, o sistema gera o quiz associado ao torneio_
+
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/TournamentService.java#L217-L258)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/GenerateTournamentQuizTest.groovy)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSTestGetTournamentQuiz.jmx)
+   + Screenshots:
+      
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708268670203199578/unknown.png)
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708268716449595492/unknown.png)
+          
+     
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/frontend/tests/e2e/specs/student/manageTournaments.js#L35-L38)
+   + Screenshot: 
+   
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708263749584421004/unknown.png)
+
+
+#### Feature number 6:_Os alunos participantes respondem às perguntas no período definido para o torneio_
+
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/TournamentService.java#L260-L276)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/GetTournamentQuizTest.groovy)
+ - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSTestGetTournamentQuiz.jmx)
+   + Screenshots:
+      
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708268448588890152/unknown.png)
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708268481346404402/unknown.png)
+     
+     
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/frontend/tests/e2e/specs/student/manageTournaments.js#L40-L42)
+   + Screenshot: 
+   
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708263749584421004/unknown.png)
+
+
+#### Feature number 7: _Existe um dashboard do aluno onde é apresentada informação acerca dos torneios em que participou e qual a sua pontuação_
+
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/statistics/StatsService.java#L108-L124)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/statistics/service/GetTournamentStatisticsTest.groovy)
+ - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/statistics/WSGetStudentStatistics.jmx)
+   + Screenshots:
+      
+     ![Test results](https://cdn.discordapp.com/attachments/539824013028098058/708283068821012551/unknown.png)
+     ![Test results](https://cdn.discordapp.com/attachments/539824013028098058/708283099691089961/unknown.png)
+     
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/frontend/tests/e2e/specs/student/checkStatistics.js#L39-L51)
+   + Screenshot: 
+   
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708263309878624296/unknown.png)
+
+
+#### Feature number 8: _O aluno decide se esta informação no seu dashboard deve ser pública ou privada_
+
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/TournamentService.java#L289-298)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/ToggleStatsPrivacyTest.groovy)
+ - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSTestToggleTournamentStatsPrivacy.jmx)
+   + Screenshots:
+      
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708268946549375037/unknown.png)
+     ![Test results](https://cdn.discordapp.com/attachments/539824013028098058/708268985698877450/unknown.png)
+     
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/frontend/tests/e2e/specs/student/checkStatistics.js#L61-L63)
+   + Screenshot: 
+   
+     ![Test results](https://media.discordapp.net/attachments/539824013028098058/708263309878624296/unknown.png)
+
 
 
 ### Additional features
 
-**TODO**: if you have implemented additional features, describe them here (following the same format as above).
+N/A
 
 
 ---
