--- a/P4.md
+++ b/P4.md
@@ -308,7 +308,7 @@ Below, we list **only** the implemented features. For each feature, we link the 
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/TournamentService.java#L112-L130)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/RemoveTournamentTest.groovy)
- - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSTestCreateTournament.jmx)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSLoadTestCancelTournament.jmx)
  - [x] [JMeter feature test load](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSTestCancelTournament.jmx)
    + Screenshots:
       
@@ -329,7 +329,7 @@ Below, we list **only** the implemented features. For each feature, we link the 
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/TournamentService.java#L217-L258)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/GenerateTournamentQuizTest.groovy)
- - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSTestGetTournamentQuiz.jmx)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSTestQuizGeneration.jmx)
    + Screenshots:
       
      ![Test results](https://media.discordapp.net/attachments/539824013028098058/708268670203199578/unknown.png)
@@ -377,7 +377,7 @@ Below, we list **only** the implemented features. For each feature, we link the 
 
 #### Feature number 8: _O aluno decide se esta informação no seu dashboard deve ser pública ou privada_
 
- - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/TournamentService.java#L289-298)
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/TournamentService.java#L289-L298)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/tournament/service/ToggleStatsPrivacyTest.groovy)
  - [x] [JMeter feature tests](https://github.com/tecnico-softeng/es20al_09-project/blob/TdP/backend/jmeter/tournament/WSTestToggleTournamentStatsPrivacy.jmx)
    + Screenshots:
